# BinaryImageRegistration

./: BinaryRegistration.cpp  BinaryRegistration.h  BinaryRegistration_with_cubature.cpp  CMakeLists.txt  ExtractContours.cpp  ExtractContours.h  JacobianComputation  MatrixComputation  README.md  README.txt  iterative_registration_test.sh
